<resources>
    <string name="app_name">PlantCare</string>
    <string name="rooms">My Rooms</string>
    <string name="plant">Plant Details</string>
    <string name="water">Water</string>
    <string name="addButton">Add</string>
    <string name="editButton">Edit</string>
    <string name="saveButton">Save</string>
    <string name="room_name">Room Name</string>
    <string name="name">Name</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="age">Age</string>
    <string name="days_between_watering">Days between watering</string>
    <string name="channel_name">water_notification_channel</string>
    <string name="home">Home</string>
</resources>