<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/waterFragment">

    <fragment
        android:id="@+id/waterFragment"
        android:name="be.howest.marijnabelshausen.plantcare.water.WaterFragment"
        android:label="@string/app_name"
        tools:layout="@layout/water_fragment">
        <action
            android:id="@+id/action_waterFragment_to_plantFragment"
            app:destination="@id/plantFragment" />
        <action
            android:id="@+id/action_waterFragment_to_plantFormFragment"
            app:destination="@id/plantFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/plantFragment"
        android:name="be.howest.marijnabelshausen.plantcare.plant.PlantFragment"
        android:label="@string/plant"
        tools:layout="@layout/plant_fragment" >
        <argument
            android:name="plantId"
            app:argType="integer" />
        <action
            android:id="@+id/action_plantFragment_to_plantFormFragment"
            app:destination="@id/plantFormFragment" />
    </fragment>
    <fragment
        android:id="@+id/roomsFragment"
        android:name="be.howest.marijnabelshausen.plantcare.rooms.RoomsFragment"
        android:label="@string/rooms"
        tools:layout="@layout/rooms_fragment">
        <action
            android:id="@+id/action_roomsFragment_to_roomFormFragment"
            app:destination="@id/roomFormFragment" />
        <action
            android:id="@+id/action_roomsFragment_to_roomDetailFragment"
            app:destination="@id/roomDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/plantFormFragment"
        android:name="be.howest.marijnabelshausen.plantcare.plant.PlantFormFragment"
        android:label="plant_form_fragment"
        tools:layout="@layout/plant_form_fragment" >
        <argument
            android:name="plantId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/roomFormFragment"
        android:name="be.howest.marijnabelshausen.plantcare.room.RoomFormFragment"
        android:label="room_form_fragment"
        tools:layout="@layout/room_form_fragment" >
        <argument
            android:name="roomId"
            app:argType="integer" />
        <action
            android:id="@+id/action_roomFormFragment_to_roomsFragment"
            app:destination="@id/roomsFragment" />
        <action
            android:id="@+id/action_roomFormFragment_to_roomDetailFragment"
            app:destination="@id/roomDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/roomDetailFragment"
        android:name="be.howest.marijnabelshausen.plantcare.room.RoomDetailFragment"
        android:label="room_detail_fragment"
        tools:layout="@layout/room_detail_fragment" >
        <action
            android:id="@+id/action_roomDetailFragment_to_roomFormFragment"
            app:destination="@id/roomFormFragment" />
        <action
            android:id="@+id/action_roomDetailFragment_to_plantFragment"
            app:destination="@id/plantFragment" />
        <argument
            android:name="roomId"
            app:argType="integer" />
    </fragment>
</navigation>